2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* src/SongDatabase.cs:

	Remove album cover pixbuf when not needed anymore.

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Release 0.3.1.1.

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:
	* src/StringUtils.cs:

	A vain attempt to make b0rken filenames work, and fix the bug
	where sometimes the "downloading image" would disappear after 
	a restart.

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/images/Makefile.am:
	* data/images/muine-cover-downloading.png:
	* src/CoverDatabase.cs:
	* src/Makefile.am:
	* src/Song.cs:

	Add a "downloading" indicator when still searching for an albums
	cover image. Also handle a maximum of 2 pages of results.

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* src/CoverDatabase.cs:

	Hopefully improve cover image fetching reliability some more.
	
	* configure.in:

	Remove explicit dependency on mono 0.29, as the relevant mono bug
	seems to be fixed.

2004-01-31  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* configure.in:
	* muine.spec.in:
	* src/About.cs:

	Release 0.3.1.

2004-01-31  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Fix SearchKey calculation. Bug pointed out by Lee Willis.

2004-01-31  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* TODO:
	* src/DashboardFrontend.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:

	Add a dashboard frontend.

2004-01-31  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Small optimization.

2004-01-31  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Add {F,f}older.jpg to cover image detection code.

2004-01-30  Jorn Baayen  <jorn@nl.linux.org>

	* configure.in:
	* po/ChangeLog:
	* po/fr.po:

	Added a French translation by Vincent Carriere.
	